# aura

./: .gitignore  CLA.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
characters/: MODELS.md  manifest.json
characters/ember/: definition.json
characters/micky/: definition.json
characters/mochi/: definition.json  model.vrm
characters/nova/: definition.json
characters/pixel/: definition.json
characters/sakura/: definition.json
docs/: README.md
docs/adr/: 0001-record-architecture-decisions.md  0002-use-tauri-for-desktop.md  README.md
docs/architecture/: capture-pipeline.md  character-engine.md  data-model.md  overview.md  sync.md  tech-stack.md
docs/features/: ai-search.md  character-physics.md  character-platform.md  clipboard-timeline.md  command-palette.md  companion-layer.md  developer-workspace.md  focus-mode.md  knowledge-graph.md  timeline.md  trading-workspace.md  universal-capture.md
docs/product/: character-roster.md  mvp.md  navigation.md  roadmap.md  vision.md
scripts/: build-manifest.mjs  download-animations.mjs  download-models.mjs  upload-release.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  overlay_input.rs  overlay_input_linux.rs  tray.rs
src-tauri/src/capture/: clipboard_monitor.rs  mod.rs
src-tauri/src/character/: config.rs  mod.rs
src-tauri/src/db/: clipboard.rs  memory.rs  mod.rs  schema.rs  settings.rs  timeline.rs
src-tauri/src/system/: mod.rs  monitor.rs
src-tauri/src/window/: geometry.rs  mod.rs
src/character/: companionSettings.ts  settingsSync.ts
src/character/components/: CharacterEffects.tsx  CharacterHitTarget.tsx  (+6 more)
src/settings/: SettingsApp.tsx
src/styles/: global.css
src/types/: character.ts
(+26 files in other folders)
