[package]
name = "aura"
version = "0.1.0"
description = "AuraOS — AI Companion + Second Brain"
authors = ["viraj"]
edition = "2021"
license = "AGPL-3.0-or-later"
license-file = "../LICENSE"

[lib]
name = "aura_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
sysinfo = "0.33"
thiserror = "2"
device_query = "2"
arboard = "3"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
cairo-rs = { version = "0.18", features = ["v1_16"] }
gdk = { version = "0.18", features = ["v3_24"] }
gtk = { version = "0.18", features = ["v3_24"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
